--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "customize-cra": "^1.0.0",
+    "gh-pages": "^3.1.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.4",
+    "stylus-loader": "^4.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start"  : "react-app-rewired start",
+    "build"  : "react-app-rewired build",
+    "test"   : "react-app-rewired test",
+    "eject"  : "react-app-rewired eject",
+    "deploy" : "gh-pages -d build",
+    "predeploy" : "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -23,6 +35,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://github.com/bokjk/202102_study_nomflix",
   "browserslist": {
     "production": [
       ">0.2%",
